add missing test